Añadida cabecera y barra de navegación en los artículos

--- a/html/noticias/articulo4.html
+++ b/html/noticias/articulo4.html
@@ -9,13 +9,14 @@
     <link rel="stylesheet" href="../../css/navmenu.css"/>
     <link rel="stylesheet" href="../../css/articulos/articulo4.css"/>
     <link rel="stylesheet" href="../../css/footer.css"/>
+    <link rel="stylesheet" href="../../css/header.css"/>
 </head>
 <body class="container">
 
-    <header class="boxHeader centrarElementos">
-        <div id="letraHeader">
-            NOTICIAS
-        </div>
+    <header>
+        <div class="boxHeader borderBox">
+            <h1 id="textoCabecera">Los Vengadores Fans</h1>
+        </div> 
     </header>
 
     <nav class="main-menu borderBox"> <!--Seccion navegacion --> 
@@ -47,6 +48,10 @@
             </ul>
     
     </nav>
+
+    <div id="letraHeaderArt" class="boxHeaderArt centrarElementos">
+        NOTICIAS
+    </div>
 
     <article class="boxArticle borderBox">
         <h1 id="estiloTitulo">'Vengadores 5': todo lo que sabemos de la película de superhéroes de Marvel</h1>
