Menú desplegable adaptado a pantallas táctiles

--- a/html/peliculas/capitanamerica.html
+++ b/html/peliculas/capitanamerica.html
@@ -29,7 +29,7 @@
         
                     <li><a class="border" href="../haztevengador.html">Hazte Vengador</a></li>
             
-                    <li><a class="border">Peliculas</a>
+                    <li><a class="border" onclick="return false">Peliculas</a>
                         <!-- Menu desplegable-->
                         <ul class="boxodificacion">    
                             <li><a href="../peliculas/losvengadores.html">Los Vengadores</a></li>
