--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         
                     <li><a class="border" href="html/haztevengador.html">Hazte Vengador</a></li>
             
-                    <li><a class="border">Peliculas</a>
+                    <li><a class="border" onclick="return false">Peliculas</a>
                         <!-- Menu desplegable-->
                         <ul class="boxodificacion">    
                             <li><a href="html/peliculas/losvengadores.html">Los Vengadores</a></li>
