Cambios en diseño de Hazte Vengador

--- a/html/haztevengador.html
+++ b/html/haztevengador.html
@@ -72,19 +72,19 @@
                 <legend >FORMULARIO DE VENGADOR</legend>
             
                 <br/>
-                <label for="usuario">Usuario:</label>
-                <input id="usuario" type="text" name="usuario" autofocus required> <span>*</span>
+                <label for="usuario"><span>*</span>  Usuario:</label>
+                <input id="usuario" type="text" name="usuario" autofocus required>
                 <br/>
                 <br/>
-                <label for="pass">Contraseña:</label>
-                <input id="pass" type="password" name="pass" required> <span>*</span><!--usamos el type="password" para que no se vea la contraseña-->
+                <label for="pass"><span>*</span>  Contraseña:</label>
+                <input id="pass" type="password" name="pass" required> <!--usamos el type="password" para que no se vea la contraseña-->
                 <br/>
                 <br/>
-                <label for="nombre">Nombre:</label>
+                <label for="nombre"><span>*</span>  Nombre:</label>
                     <!-- Dentro de la etiqueta <label> tenemos el atributo "for" si pulsamos en nombre dado a la etiqueta <label> se nos pincha la caja, para que podamos
                          escribir, el valor del atributo "for" se iguala al valor del atributo "id" del elemento del formulario.-->
                 
-                <input id="nombre" type="text" name="nombre" required> <span>*</span>
+                <input id="nombre" type="text" name="nombre" required> 
                 <br/>
                 <br/>
                 <label for="apellidos">Apellidos:</label>
@@ -95,8 +95,8 @@
                 <input id="telefono" type="tel" name="telefono">
                 <br/>
                 <br/>
-                <label for="fechanacimiento">Fecha de nacimiento:</label>
-                <input id="fechanacimiento" type="date" name="fechanacimiento" required> <span>*</span>
+                <label for="fechanacimiento"><span>*</span>  Fecha de nacimiento:</label>
+                <input id="fechanacimiento" type="date" name="fechanacimiento" required> 
                 <br/>
                 <br/>
                 <label for="hermanos">Número de hermanos:</label>
