Terminado diseño responsivo de todas las páginas de Películas

--- a/html/peliculas/thor.html
+++ b/html/peliculas/thor.html
@@ -50,7 +50,7 @@
     </nav>
 
     <div class="box propiedadesBox centrarElementos"><!-- Cabecera-->
-        <div id="letraTitulor">
+        <div id="letraTitulo">
             Thor
         </div>
     </div>
